[package]
name = "iron_practice"
version = "0.1.0"
authors = ["wooq <wooq@nhnnext.org>"]

[dependencies]
bincode = "*"
rustc-serialize = "*"

[dependencies.iron]
version = "*"

[dependencies.time]
version = "*"

[dependencies.router]
version = "*"

[dependencies.bodyparser]
version = "*"

[dependencies.persistent]
version = "*"